--- a/themes/dark_mint/dark_mint.yaml
+++ b/themes/dark_mint/dark_mint.yaml
@@ -32,7 +32,7 @@ dark_mint:
   paper-item-icon-color: "var(--primary-text-color)"
   paper-item-icon_-_color: "green"
   paper-item-selected_-_background-color: "#4A4346"
-  paper-listbox-background-color: "#292929"
+  paper-listbox-background-color: "#1f1f1f"
   paper-listbox-color: "var(--primary-color)"
   paper-slider-active-color: "var(--accent-color)"
   paper-slider-container-color: "linear-gradient(var(--primary-background-color) var(--secondary-background-color)) no-repeat"
@@ -49,7 +49,7 @@ dark_mint:
   paper-toggle-button-unchecked-bar-color: "var(--disabled-text-color)"
   paper-toggle-button-unchecked-button-color: "var(--disabled-text-color)"
   paper-toggle-button-unchecked-ink-color: "var(--disabled-text-color)"
-  primary-background-color: "#333333"
+  primary-background-color: "#292929"
   primary-color: "#48BA92"
   primary-text-color: "#FFFFFF"
   secondary-background-color: "#333333"
