moved to the UI

--- a/sensors/maria_db_size.yaml
+++ b/sensors/maria_db_size.yaml
@@ -1,11 +1,11 @@
-- platform: sql
-  db_url: !secret mariadb_url
-  queries:
-    - name: Maria DB Size
-      query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1048576, 2) "value" FROM information_schema.tables WHERE table_schema="homeassistant" GROUP BY table_schema;'
-      column: 'value'
-      unit_of_measurement: MB
-    - name: DB size_kb
-      query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1024, 1) "value" FROM information_schema.tables WHERE table_schema="homeassistant" GROUP BY table_schema;'
-      column: 'value'
-      unit_of_measurement: kB
+# - platform: sql
+#   db_url: !secret mariadb_url
+#   queries:
+#     - name: Maria DB Size
+#       query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1048576, 2) "value" FROM information_schema.tables WHERE table_schema="homeassistant" GROUP BY table_schema;'
+#       column: 'value'
+#       unit_of_measurement: MB
+#     - name: DB size_kb
+#       query: 'SELECT table_schema "database", Round(Sum(data_length + index_length) / 1024, 1) "value" FROM information_schema.tables WHERE table_schema="homeassistant" GROUP BY table_schema;'
+#       column: 'value'
+#       unit_of_measurement: kB
