--- a/groups.yaml
+++ b/groups.yaml
@@ -48,9 +48,9 @@ echos:
     - media_player.bathroom
     - media_player.bedroom
 
-nest_speakers:
-  name: Nest Speakers
-  entities: 
-    - media_player.kouzina_display
-    - media_player.kouzina_hub
-    - media_player.saloni_speaker
+# nest_speakers:
+#   name: Nest Speakers
+#   entities: 
+#     - media_player.kouzina_display
+#     - media_player.kouzina_hub
+#     # - media_player.saloni_speaker
