--- a/cameras/vivotek.yaml
+++ b/cameras/vivotek.yaml
@@ -4,14 +4,14 @@
 # - platform: ffmpeg
 #   name: saloni_rtsp
 #   input: !secret porta_url
-- platform: mjpeg
-  name: Saloni_mjpeg
-  mjpeg_url: !secret saloni_mjpeg_url
-  still_image_url: !secret saloni_still_image_url
-  username: !secret vivotek_username
-  password: !secret vivotek_password
-  authentication: basic
-  verify_ssl: false
+# - platform: mjpeg
+#   name: Saloni_mjpeg
+#   mjpeg_url: !secret saloni_mjpeg_url
+#   still_image_url: !secret saloni_still_image_url
+#   username: !secret vivotek_username
+#   password: !secret vivotek_password
+#   authentication: basic
+#   verify_ssl: false
 # - platform: mjpeg
 #   name: Domatio_mjpeg
 #   mjpeg_url: !secret dwmatio_mjpeg_url
